# todo-ms-rs

./: .env  Cargo.toml  README.md
configuration/: base.yaml  local.yaml
migrations/: 20231204094333_initial.sql
src/: configuration.rs  error.rs  lib.rs  main.rs  model.rs
src/rest/: todo.rs
src/routes/: health.rs  mod.rs  todo.rs
tests/: common.rs  tests.rs
tests/api/: health.rs  todo.rs
tests/fixtures/: todo.sql
tests/rest/: health.rs  todo.rs
