[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo"

[dependencies]
axum = "0.7.1"
axum-macros = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
mime = "0.3.17"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4","serde"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.4", features = ["util"] }