[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todo"

[dependencies]
axum = "0.7.1"
axum-macros = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
config = { version = "0.13.4", features = [] }
mime = "0.3.17"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "migrate"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4","serde"] }
tracing-subscriber = { version = "0.3.18", features = [] }
anyhow = "1.0.75"
thiserror = "1.0.50"
validator = { version = "0.16.1", features = ["derive"] }
serde_with = { version = "3.4.0", features = [] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.4.13", features = ["util"] }